# 5204-Optimization

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  vcpkg.json
benchmarks/: benchmark.cpp
include/: Camera.hpp  Rasterizer.hpp  Scene.hpp  oldCube.hpp  oldScene.hpp  oldTriangle.hpp
src/: Camera.cpp  Main.cpp  Rasterizer.cpp  Scene.cpp
tests/: tests.cpp
